Added video processing notebook

--- a/notebooks/video_preprocessing/data_processing.ipynb
+++ b/notebooks/video_preprocessing/data_processing.ipynb
@@ -15,8 +15,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T12:04:52.095402Z",
-     "start_time": "2024-04-16T12:04:52.092238Z"
+     "end_time": "2024-04-18T05:20:19.567261Z",
+     "start_time": "2024-04-18T05:20:19.334623Z"
     }
    },
    "cell_type": "code",
@@ -30,13 +30,13 @@
    ],
    "id": "86a40dfff3b10f8b",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T12:04:52.294385Z",
-     "start_time": "2024-04-16T12:04:52.288688Z"
+     "end_time": "2024-04-18T05:20:19.574019Z",
+     "start_time": "2024-04-18T05:20:19.568715Z"
     }
    },
    "cell_type": "code",
@@ -52,12 +52,12 @@
        "PosixPath('/mnt/d/Projects_D/Brand_Extractor')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -68,13 +68,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T12:04:52.614220Z",
-     "start_time": "2024-04-16T12:04:52.610071Z"
+     "end_time": "2024-04-18T05:20:19.770062Z",
+     "start_time": "2024-04-18T05:20:19.764776Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "data_dir = root_dir / 'data' / 'brand_extractor'\n",
+    "data_dir = root_dir / 'data' / 'video_preprocessing'\n",
     "data_dir"
    ],
    "id": "c92c148719ecafd",
@@ -82,21 +82,21 @@
     {
      "data": {
       "text/plain": [
-       "PosixPath('/mnt/d/Projects_D/Brand_Extractor/data/brand_extractor')"
+       "PosixPath('/mnt/d/Projects_D/Brand_Extractor/data/video_preprocessing')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T12:04:52.810193Z",
-     "start_time": "2024-04-16T12:04:52.805314Z"
+     "end_time": "2024-04-18T05:20:21.523190Z",
+     "start_time": "2024-04-18T05:20:21.519094Z"
     }
    },
    "cell_type": "code",
@@ -109,21 +109,21 @@
     {
      "data": {
       "text/plain": [
-       "PosixPath('/mnt/d/Projects_D/Brand_Extractor/data/brand_extractor/videos')"
+       "PosixPath('/mnt/d/Projects_D/Brand_Extractor/data/video_preprocessing/videos')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T12:04:52.997472Z",
-     "start_time": "2024-04-16T12:04:52.993010Z"
+     "end_time": "2024-04-18T05:20:21.773587Z",
+     "start_time": "2024-04-18T05:20:21.769291Z"
     }
    },
    "cell_type": "code",
@@ -136,34 +136,34 @@
     {
      "data": {
       "text/plain": [
-       "PosixPath('/mnt/d/Projects_D/Brand_Extractor/data/brand_extractor/frames')"
+       "PosixPath('/mnt/d/Projects_D/Brand_Extractor/data/video_preprocessing/frames')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T12:04:53.188713Z",
-     "start_time": "2024-04-16T12:04:53.182390Z"
+     "end_time": "2024-04-18T05:20:21.993882Z",
+     "start_time": "2024-04-18T05:20:21.987419Z"
     }
    },
    "cell_type": "code",
    "source": "video_files = list(video_dir.glob('*.mp4'))",
    "id": "dae89a57aeee942f",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T12:04:53.365879Z",
-     "start_time": "2024-04-16T12:04:53.361964Z"
+     "end_time": "2024-04-18T05:20:22.491539Z",
+     "start_time": "2024-04-18T05:20:22.487402Z"
     }
    },
    "cell_type": "code",
@@ -173,36 +173,36 @@
     {
      "data": {
       "text/plain": [
-       "[PosixPath('/mnt/d/Projects_D/Brand_Extractor/data/brand_extractor/videos/tanishq_mishra_vlogs_lulu_mall.mp4'),\n",
-       " PosixPath('/mnt/d/Projects_D/Brand_Extractor/data/brand_extractor/videos/the_explorer_raj_dlf_mall.mp4'),\n",
-       " PosixPath('/mnt/d/Projects_D/Brand_Extractor/data/brand_extractor/videos/travel_with_chris_crazy_market_spree.mp4')]"
+       "[PosixPath('/mnt/d/Projects_D/Brand_Extractor/data/video_preprocessing/videos/tanishq_mishra_vlogs_lulu_mall.mp4'),\n",
+       " PosixPath('/mnt/d/Projects_D/Brand_Extractor/data/video_preprocessing/videos/the_explorer_raj_dlf_mall.mp4'),\n",
+       " PosixPath('/mnt/d/Projects_D/Brand_Extractor/data/video_preprocessing/videos/travel_with_chris_crazy_market_spree.mp4')]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-18T05:20:25.859822Z",
+     "start_time": "2024-04-18T05:20:25.856338Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "video_file = video_files[1]",
+   "id": "fbe3f4cd2cb462f4",
+   "outputs": [],
    "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T12:04:53.569872Z",
-     "start_time": "2024-04-16T12:04:53.566958Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "video_file = video_files[0]",
-   "id": "fbe3f4cd2cb462f4",
-   "outputs": [],
-   "execution_count": 9
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-04-16T12:04:53.872539Z",
-     "start_time": "2024-04-16T12:04:53.868301Z"
+     "end_time": "2024-04-18T05:20:26.471940Z",
+     "start_time": "2024-04-18T05:20:26.467450Z"
     }
    },
    "cell_type": "code",
@@ -215,15 +215,15 @@
     {
      "data": {
       "text/plain": [
-       "'tanishq_mishra_vlogs_lulu_mall'"
+       "'the_explorer_raj_dlf_mall'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -234,21 +234,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T12:04:54.463471Z",
-     "start_time": "2024-04-16T12:04:54.433957Z"
+     "end_time": "2024-04-18T05:20:28.187017Z",
+     "start_time": "2024-04-18T05:20:28.129709Z"
     }
    },
    "cell_type": "code",
    "source": "video_capture = cv2.VideoCapture(str(video_file))",
    "id": "e8a26f0f70709b7b",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T12:04:54.624117Z",
-     "start_time": "2024-04-16T12:04:54.620136Z"
+     "end_time": "2024-04-18T05:20:28.621635Z",
+     "start_time": "2024-04-18T05:20:28.615646Z"
     }
    },
    "cell_type": "code",
@@ -261,18 +261,18 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T12:04:54.813019Z",
-     "start_time": "2024-04-16T12:04:54.808526Z"
+     "end_time": "2024-04-18T05:20:30.087337Z",
+     "start_time": "2024-04-18T05:20:30.081205Z"
     }
    },
    "cell_type": "code",
@@ -285,21 +285,21 @@
     {
      "data": {
       "text/plain": [
-       "60.0"
+       "25.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T12:04:55.005966Z",
-     "start_time": "2024-04-16T12:04:55.001020Z"
+     "end_time": "2024-04-18T05:20:31.145263Z",
+     "start_time": "2024-04-18T05:20:31.141404Z"
     }
    },
    "cell_type": "code",
@@ -312,21 +312,21 @@
     {
      "data": {
       "text/plain": [
-       "71990"
+       "38392"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T12:04:55.203473Z",
-     "start_time": "2024-04-16T12:04:55.199256Z"
+     "end_time": "2024-04-18T05:20:32.416203Z",
+     "start_time": "2024-04-18T05:20:32.411865Z"
     }
    },
    "cell_type": "code",
@@ -343,12 +343,12 @@
        "(1920, 1080)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 15
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -359,21 +359,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T12:04:56.414729Z",
-     "start_time": "2024-04-16T12:04:56.411521Z"
+     "end_time": "2024-04-18T05:20:33.611095Z",
+     "start_time": "2024-04-18T05:20:33.608016Z"
     }
    },
    "cell_type": "code",
    "source": "sample_fps = 1",
    "id": "e86ae2be15362d15",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T12:04:56.716221Z",
-     "start_time": "2024-04-16T12:04:56.709334Z"
+     "end_time": "2024-04-18T05:20:35.054476Z",
+     "start_time": "2024-04-18T05:20:35.048227Z"
     }
    },
    "cell_type": "code",
@@ -387,21 +387,21 @@
     {
      "data": {
       "text/plain": [
-       "PosixPath('/mnt/d/Projects_D/Brand_Extractor/data/brand_extractor/frames/tanishq_mishra_vlogs_lulu_mall')"
+       "PosixPath('/mnt/d/Projects_D/Brand_Extractor/data/video_preprocessing/frames/the_explorer_raj_dlf_mall')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 17
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T12:04:57.039711Z",
-     "start_time": "2024-04-16T12:04:57.033271Z"
+     "end_time": "2024-04-18T05:20:35.561154Z",
+     "start_time": "2024-04-18T05:20:35.555985Z"
     }
    },
    "cell_type": "code",
@@ -415,21 +415,21 @@
     {
      "data": {
       "text/plain": [
-       "PosixPath('/mnt/d/Projects_D/Brand_Extractor/data/brand_extractor/frames/tanishq_mishra_vlogs_lulu_mall/images')"
+       "PosixPath('/mnt/d/Projects_D/Brand_Extractor/data/video_preprocessing/frames/the_explorer_raj_dlf_mall/images')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 18
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T12:04:59.068255Z",
-     "start_time": "2024-04-16T12:04:59.064814Z"
+     "end_time": "2024-04-18T05:20:36.644731Z",
+     "start_time": "2024-04-18T05:20:36.641265Z"
     }
    },
    "cell_type": "code",
@@ -446,13 +446,13 @@
    ],
    "id": "35089afd2b5e8117",
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T12:11:31.284902Z",
-     "start_time": "2024-04-16T12:05:58.357155Z"
+     "end_time": "2024-04-18T05:24:54.190163Z",
+     "start_time": "2024-04-18T05:20:40.517770Z"
     }
    },
    "cell_type": "code",
@@ -475,26 +475,26 @@
    ],
    "id": "fcbf5c5430c5bd42",
    "outputs": [],
-   "execution_count": 24
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T12:11:31.289924Z",
-     "start_time": "2024-04-16T12:11:31.286541Z"
+     "end_time": "2024-04-18T05:24:54.194085Z",
+     "start_time": "2024-04-18T05:24:54.191557Z"
     }
    },
    "cell_type": "code",
    "source": "frame_data[\"sample_frames\"] = len(frame_data[\"frames\"])",
    "id": "eb1eb6de75e39c0f",
    "outputs": [],
-   "execution_count": 25
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T12:11:31.307258Z",
-     "start_time": "2024-04-16T12:11:31.291259Z"
+     "end_time": "2024-04-18T05:24:54.206307Z",
+     "start_time": "2024-04-18T05:24:54.195140Z"
     }
    },
    "cell_type": "code",
@@ -507,18 +507,18 @@
        "dict_keys(['video', 'fps', 'total_frames', 'width', 'height', 'sample_fps', 'frames', 'sample_frames'])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 26
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T12:11:31.339238Z",
-     "start_time": "2024-04-16T12:11:31.308849Z"
+     "end_time": "2024-04-18T05:24:54.225726Z",
+     "start_time": "2024-04-18T05:24:54.207835Z"
     }
    },
    "cell_type": "code",
@@ -530,20 +530,20 @@
    ],
    "id": "d98331cf19b88958",
    "outputs": [],
-   "execution_count": 27
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T12:11:31.347918Z",
-     "start_time": "2024-04-16T12:11:31.340501Z"
+     "end_time": "2024-04-18T05:24:54.231132Z",
+     "start_time": "2024-04-18T05:24:54.226831Z"
     }
    },
    "cell_type": "code",
    "source": "video_capture.release()",
    "id": "6fbe8f451fc68a42",
    "outputs": [],
-   "execution_count": 28
+   "execution_count": 23
   },
   {
    "metadata": {
